--- a/src/components/GameCard/gamecard.scss
+++ b/src/components/GameCard/gamecard.scss
@@ -1,3 +1,9 @@
+@use "/src/styles/styles" as *;
 .containerIcon {
-  border: 2px solid blue;
+  margin: 10px;
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  border: 1em solid $scissorsGradient;
+  background-color: white;
 }
