adicionando opção de escolher pedra

--- a/src/components/GameCard/gamecard.scss
+++ b/src/components/GameCard/gamecard.scss
@@ -18,6 +18,8 @@
 }
 .containerIcon--BorderRock {
   border: 1em solid $rockGradient;
+  left: 20%;
+  bottom: 10%;
 }
 .containerIcon--BorderPaper {
   border: 1em solid $paperGradient;
