--- a/src/components/OptionsGame/options.scss
+++ b/src/components/OptionsGame/options.scss
@@ -1,7 +1,8 @@
 .backgroundGame {
   background-image: url("/src/assets/bg-triangle.svg");
-  width: 100vw;
-  height: 100vh;
+  width: 320px;
+  /*  height: 100%; */
   background-repeat: no-repeat;
-  position: absolute;
+  margin-left: 20px;
+  /* position: absolute; */
 }
