--- a/src/index.scss
+++ b/src/index.scss
@@ -10,5 +10,9 @@ body {
 }
 
 .main {
-  margin: 50% 12%;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
