--- a/src/components/Score/score.scss
+++ b/src/components/Score/score.scss
@@ -1,7 +1,14 @@
+@use "/src/styles/styles" as *;
 .score {
-  border: 5px solid black;
+  border: 3px solid $headerOutline;
   border-radius: 5%;
   width: 80%;
   height: 12%;
   margin: 10% 0 30% 0;
+  padding: 1em;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  &--describ {
+  }
 }
