--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -14,4 +14,4 @@ $headerOutline: hsl(217, 16%, 45%);
 $radialGradient: hsl(214, 47%, 23%);
 
 /* Font */
-$family: [Barlow Semi Condensed];
+$family: "Barlow Semi Condensed" /* [Barlow Semi Condensed] */;
