--- a/src/components/Score/score.scss
+++ b/src/components/Score/score.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     &__spots {
       align-items: center;
+      justify-content: center;
       background-color: #ffff;
       border-radius: 5px;
       width: 30%;
