passando dinamicamente os dados para a tela de confronto

--- a/src/components/GameCard/gamecard.scss
+++ b/src/components/GameCard/gamecard.scss
@@ -9,7 +9,7 @@
   align-items: center;
   cursor: pointer;
   position: relative;
-  &--BorderScissor {
+  &--BorderScissors {
     border: 1em solid $scissorsGradient;
     bottom: 10%;
     left: 65%;
