--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -1,10 +1,27 @@
+@use "/src/styles/styles" as *;
 .game {
   display: flex;
   justify-content: space-between;
   width: 80%;
+  &--Typography {
+    font-family: $family;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #ffff;
+  }
   &--Picked {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+  &--Rules {
+    width: 35%;
+    height: 5%;
+    background: transparent;
+    border: 2px solid #ffff;
+    border-radius: 7px;
+    font-size: 1.2em;
+    margin-top: 50%;
   }
 }
