--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -22,6 +22,21 @@
     border: 2px solid #ffff;
     border-radius: 7px;
     font-size: 1.2em;
-    margin-top: 50%;
+    margin-top: 10%;
+  }
+  &--playAgain {
+    width: 60%;
+    height: 5%;
+    background-color: white;
+    border-radius: 10px;
+    border: none;
+    font-size: 1.2em;
+    text-transform: uppercase;
+    padding: 1%;
+    color: hsl(229deg, 25%, 31%);
+    font-weight: 600;
+    letter-spacing: 0.1em;
+
+    margin-top: 70%;
   }
 }
