--- a/src/components/Score/score.scss
+++ b/src/components/Score/score.scss
@@ -4,7 +4,7 @@
   border-radius: 5%;
   width: 80%;
   height: 12%;
-  margin: 10% 0 30% 0;
+  /* margin: 10% 0 30% 0; */
   padding: 1em;
   text-transform: uppercase;
   display: flex;
