--- a/src/styles/game.scss
+++ b/src/styles/game.scss
@@ -52,7 +52,7 @@
   }
 }
 
-.message-delayed {
+/* .message-delayed {
   animation: imgFadeIn 2s ease 2s forwards;
   opacity: 0;
 }
@@ -63,7 +63,7 @@
 .img-delayed {
   animation: imgFadeIn 2s ease 2s forwards;
   opacity: 0;
-}
+} */
 @keyframes fadeIn {
   0% {
     border: none;
